- Added rotationChanged() for Actor class, called when rotation changes, see https://github.com/libgdx/libgdx/pull/3563
- Fixed crash on MacOS when enumerating connected gamepads.
- ParticleEmitter no longer says it's complete when it's set to continuous, see #3516
- Improved JSON parsing and object mapping error messages.
- Updated freetype from version 2.5.5 to 2.6.2

[1.7.1]
- Fixes AtlasTmxMapLoader region name loading to tileset name instead of filename
- Changes TiledMapPacker output, region names are tileset names, adjusts gid, defaults to one atlas per map
- API Change: members of Renderable and MeshPart are changed, see https://github.com/libgdx/libgdx/pull/3483
- Added Vector#setToRandomDirection(), see #3222
- Updated to stb_image v2.08
- Added Node#copy(), used when creating a ModelInstance from a Model to allow using custom nodes
- Add ModelCache, see https://github.com/libgdx/libgdx/wiki/ModelCache
- Updated bullet to v2.83.6
- Updated to RoboVM 1.9, for free life-time license read http://www.badlogicgames.com/wordpress/?p=3762

[1.7.0]
- Gdx.input.setCursorImage removed, replaced with Gdx.graphics.setCursor and Gdx.graphics.newCursor see https://github.com/libgdx/libgdx/pull/2841/
- Fixed an issue with UTF8 decoding in GWT emulation of InputStreamReader
- Updated to RoboVM 1.8 for iOS 9 support.

[1.6.5]
- Objects from animated tiles in TMX maps are now supported.
- Made possible to use any actor for tooltips.
- Improved cross-platform reflection api for annotations.
- NinePatch#scale now also scales middle patch size.
- GLFrameBuffer is now abstract, renamed setupTexture to createColorTexture, added disposeColorTexture
- Added LwjglApplicationConfiguration#gles30Context*Version, see https://github.com/libgdx/libgdx/pull/2941
- Added OpenGL error checking to GLProfiler, see https://github.com/libgdx/libgdx/pull/2889
- Updated to RoboVM 1.6

[1.6.4]