@@ -6,6 +6,7 @@
 - ParticleEmitter no longer says it's complete when it's set to continuous, see #3516
 - Improved JSON parsing and object mapping error messages.
 - Updated freetype from version 2.5.5 to 2.6.2
+- Can specify TiledDrawable in Skin from Json.
 
 [1.7.1]
 - Fixes AtlasTmxMapLoader region name loading to tileset name instead of filename
